2014/03/26 : 新增所有書籍畫面page view layout
2014/03/26 : 新增indicator view
2014/03/20 : 新增account add視窗
2014/03/20 : 新增Switch Button元件 套用於書城的setting畫面
2014/03/19 : 新增書城setting視窗 透過flipper滑出
2014/03/18 : 新增書城login視窗 透過flipper滑出
2014/03/17 : 新增書城menu list視窗